[gd_scene load_steps=3 format=3 uid="uid://rqo7i15qw0cg"]

[ext_resource type="Script" uid="uid://bu186uaejuyca" path="res://addons/reaction/components/responses_edit_forms/responses_groups_components/ReactionUIResponseGroupResponseConfig.gd" id="1_4umu1"]
[ext_resource type="PackedScene" uid="uid://cl33asfebw70e" path="res://addons/reaction/components/ReactionUIFunctionManagment.tscn" id="2_dfj8p"]

[node name="ReactionUIResponseGroupResponseConfig" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_4umu1")

[node name="ResponseDataContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ResponseNameLineEdit" type="LineEdit" parent="ResponseDataContainer"]
unique_name_in_owner = true
layout_mode = 2
editable = false
expand_to_text_length = true

[node name="ResponseUidLineEdit" type="LineEdit" parent="ResponseDataContainer"]
unique_name_in_owner = true
layout_mode = 2
editable = false
expand_to_text_length = true

[node name="ExecutionOrderContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="ExecutionOrderContainer"]
layout_mode = 2
text = "Execution Order:"

[node name="OrderSpinBox" type="SpinBox" parent="ExecutionOrderContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="WeightContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="WeightContainer"]
layout_mode = 2
text = "Weigth Function:"

[node name="FunctionButton" type="Button" parent="WeightContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Function
"

[node name="MatchOnceContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MatchOnceContainer"]
layout_mode = 2
text = "Match once:"

[node name="ReturnOnceCheckButton" type="CheckButton" parent="MatchOnceContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="FactsFunctionConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Facts Functions"
size = Vector2i(500, 500)

[node name="MarginContainer" type="MarginContainer" parent="FactsFunctionConfirmationDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 315.0
offset_bottom = 451.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColumnsContainer" type="HBoxContainer" parent="FactsFunctionConfirmationDialog/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="FunctionFactsContainer" type="VBoxContainer" parent="FactsFunctionConfirmationDialog/MarginContainer/ColumnsContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="FactsFunctionConfirmationDialog/MarginContainer/ColumnsContainer/FunctionFactsContainer"]
layout_mode = 2
text = "Function:
"

[node name="FunctionManagment" parent="FactsFunctionConfirmationDialog/MarginContainer/ColumnsContainer/FunctionFactsContainer" instance=ExtResource("2_dfj8p")]
unique_name_in_owner = true
layout_mode = 2
